--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -3,9 +3,9 @@
     <ol class = "breadcrumb">
     {% for breadcrumb in breadcrumbs %}
         {% if breadcrumb["url"] == None %}
-            <li class = "active">{{ breadcrumb["text"] }}</li>
+            <li class = "active">{{ breadcrumb["text"] | safe }}</li>
         {% else %}
-            <li><a href = "{{ breadcrumb["url"] }}">{{ breadcrumb["text"] }}</a></li>
+            <li><a href = "{{ breadcrumb["url"] }}">{{ breadcrumb["text"] | safe }}</a></li>
         {% endif %}
     {% endfor %}
     </ol>
