--- a/app/templates/addEditModel.html
+++ b/app/templates/addEditModel.html
@@ -24,6 +24,7 @@
     <script>
         $(document).ready(function()
         {
+            $(".form-control").first().focus()
             $("#submit").hide()
             $("#submit").parent().append("<button class = \"btn btn-default\" title = \"Save\" type = \"submit\">" +
                 "<span class = \"glyphicon glyphicon-floppy-disk\" aria-hidden = \"true\"></span></button>")
