--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -11,12 +11,10 @@ Data Entry - Elements
     <ol class = "breadcrumb">
         {% if childrenClass == "Enterprise" %}
             <li class = "active">..</li>
-            {% set tableHeader = "Enterprise" %}
             {% set pageHeaderSubText = "Enterprises" %}
         {% elif childrenClass == "Site" %}
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
             <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Site" %}
             {% set pageHeaderSubText = "Sites" %}
         <!-- "and parent" checks for systems that have not been configured with a site yet. -->
         {% elif childrenClass == "ElementTemplate" and parent %}
@@ -24,7 +22,6 @@ Data Entry - Elements
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Enterprise",
                 selectedId = parent.Enterprise.id()) }}">{{ parent.Enterprise.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Element Template" %}
             {% set pageHeaderSubText = "Element Templates" %}
         {% elif childrenClass == "ElementAttributeTemplate" %}
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
@@ -33,7 +30,6 @@ Data Entry - Elements
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Site",
                 selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Element Attribute Template" %}
             {% set pageHeaderSubText = "Attribute Templates" %}
         {% elif childrenClass == "Element" %}
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
@@ -42,7 +38,6 @@ Data Entry - Elements
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Site",
                 selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Element" %}
             {% set pageHeaderSubText = "" %}
         {% endif %}
     </ol>
@@ -54,19 +49,21 @@ Data Entry - Elements
     {% if childrenClass == "Element" %}
         <a class = "btn btn-default" title = "Add" href = "{{ url_for("elements.addElement", elementTemplateId = parent.id()) }}" role = "button">
             <span class = "glyphicon glyphicon-plus"></span></a>
+        <br><br>
     {% elif childrenClass == "ElementAttributeTemplate" %}
-        <a class = "btn btn-default" title = "Add Element Attribute Template" href = "{{ url_for("elementAttributeTemplates.addElementAttributeTemplate",
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("elementAttributeTemplates.addElementAttributeTemplate",
             elementTemplateId = parent.id()) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
+        <br><br>
     {% elif childrenClass == "ElementTemplate" %}
-        <a class = "btn btn-default" title = "Add Element Template" href = "{{ url_for("elementTemplates.addElementTemplate", siteId = parent.id()) }}"
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("elementTemplates.addElementTemplate", siteId = parent.id()) }}"
             role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
+        <br><br>
     {% endif %}
-    <br><br>
     <table id = "table" class = "table">
         <thead>
             <tr>
                 <th></th>
-                <th>{{ tableHeader }}</th>
+                <th>Name</th>
                 <th>Description</th>
                 <th></th>
                 <th></th>
@@ -102,7 +99,7 @@ Data Entry - Elements
                             <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("elementAttributeTemplates.deleteElementAttributeTemplate",
                                 elementAttributeTemplateId = child.id()) }}"><span class = "glyphicon glyphicon-trash"></a></td>
                         {% elif childrenClass == "ElementTemplate" %}
-                            <td><a class = "btn btn-default" title = "Configure Element Template" href = "{{ url_for("elements.selectElement",
+                            <td><a class = "btn btn-default" title = "Configure" href = "{{ url_for("elements.selectElement",
                                 selectedClass = "ElementAttributeTemplate", selectedId = child.id()) }}"><span class = "glyphicon glyphicon-wrench"></a></td>
                             <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("elementTemplates.editElementTemplate",
                                 elementTemplateId = child.id()) }}"><span class = "glyphicon glyphicon-edit"></a></td>
