--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -29,21 +29,21 @@ Event Frame Dashboard
                     {% if eventFrame.ParentEventFrameId == None %}
                         <li class = "active">{{ eventFrame.friendlyName() }}</li>
                     {% else %}
-                        <li class = "active">{{ eventFrame.EventFrameTemplate.Name + " / " + eventFrame.friendlyName() }}</li>
+                        <li class = "active">{{ eventFrame.EventFrameTemplate.Name }}&nbsp;&nbsp;/&nbsp;&nbsp;{{ eventFrame.friendlyName() }}</li>
                     {% endif %}
                 {% else %}
                     {% if eventFrame.ParentEventFrameId == None %}
                         <li><a href = "{{ url_for("eventFrames.dashboard", eventFrameId = eventFrame.EventFrameId) }}">{{ eventFrame.friendlyName() }}</a></li>
                     {% else %}
                         <li><a href = "{{ url_for("eventFrames.dashboard", eventFrameId = eventFrame.EventFrameId) }}">
-                            {{ eventFrame.EventFrameTemplate.Name + " / " + eventFrame.friendlyName() }}</a></li>
+                            {{ eventFrame.EventFrameTemplate.Name }}&nbsp;&nbsp;/&nbsp;&nbsp;{{ eventFrame.friendlyName() }}</a></li>
                     {% endif %}
                 {% endif %}
             {% endfor %}
     </ol>
 </div>
 <div class = "page-header">
-    <h1>Child Event Frames <small>{{ eventFrame.Element.Name }}</small></h1>
+    <h1>Child Event Frames <small>{{ eventFrame.origin().Element.Name }}</small></h1>
 </div>
 <div>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrames.addEventFrame", parentEventFrameId = eventFrame.EventFrameId) }}"
@@ -87,7 +87,7 @@ Event Frame Dashboard
     </table>
 </div>
 <div class = "page-header">
-    <h1>Notes <small>{{ eventFrame.Element.Name }}</small></h1>
+    <h1>Notes <small>{{ eventFrame.origin().Element.Name }}</small></h1>
 </div>
 <div>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameNotes.addEventFrameNote", eventFrameId = eventFrame.id()) }}" role = "button">
