--- a/app/templates/lookups/select.html
+++ b/app/templates/lookups/select.html
@@ -11,19 +11,16 @@ Lookups
     <ol class = "breadcrumb">
         {% if childrenClass == "Enterprise" %}
             <li class = "active">..</li>
-            {% set tableHeader = "Enterprise" %}
             {% set pageHeaderSubText = "Enterprises" %}
         {% elif childrenClass == "Lookup" %}
             <li><a href = "{{ url_for("lookups.selectLookup", selectedClass = "Root") }}">..</a></li>
             <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Lookup" %}
             {% set pageHeaderSubText = "" %}
         {% elif childrenClass == "LookupValue" %}
             <li><a href = "{{ url_for("lookups.selectLookup", selectedClass = "Root") }}">..</a></li>
             <li><a href = "{{ url_for("lookups.selectLookup", selectedClass = "Enterprise", selectedId = parent.Enterprise.id()) }}">
                 {{ parent.Enterprise.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Name" %}
             {% set pageHeaderSubText = "Values" %}
         {% endif %}
     </ol>
@@ -32,11 +29,11 @@ Lookups
     <h1>Lookups <small>{{ pageHeaderSubText }}</small></h1>
 </div>
 <div>
-    {% if childrenClass == "Lookup" %}
-        <a class = "btn btn-default" title = "Add a Lookup" href = "{{ url_for("lookups.addLookup", enterpriseId = parent.id()) }}" role = "button">
+    {% if childrenClass == "Lookup" and parent %}
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("lookups.addLookup", enterpriseId = parent.id()) }}" role = "button">
             <span class = "glyphicon glyphicon-plus"></span></a>
     {% elif childrenClass == "LookupValue" %}
-        <a class = "btn btn-default" title = "Add a Lookup Value" href = "{{ url_for("lookupValues.addLookupValue", lookupId = parent.id()) }}" role = "button">
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("lookupValues.addLookupValue", lookupId = parent.id()) }}" role = "button">
             <span class = "glyphicon glyphicon-plus"></span></a>
     {% endif %}
     <br><br>
@@ -44,8 +41,10 @@ Lookups
         <thead>
             <tr>
                 <th></th>
-                <th>{{ tableHeader }}</th>
-                <th>Selectable</th>
+                <th>Name</th>
+                {% if childrenClass == "LookupValue" %}
+                    <th>Selectable</th>
+                {% endif %}
                 <th></th>
                 <th></th>
             </tr>
@@ -61,7 +60,9 @@ Lookups
                             <td></td>
                         {% endif %}
                         <td>{{ child.Name }}</td>
-                        <td>{{ child.Selectable }}</td>
+                        {% if childrenClass == "LookupValue" %}
+                            <td>{{ child.Selectable }}</td>
+                        {% endif %}
                         {% if childrenClass == "Lookup" %}
                             <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("lookups.editLookup",
                                 lookupId = child.LookupId) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
@@ -101,7 +102,9 @@ Lookups
                 [
                     { "orderable": false }, // Select button.
                     null,
-                    null,
+                    {% if childrenClass == "LookupValue" %}
+                        null,
+                    {% endif %}
                     { "orderable": false }, // Edit button.
                     { "orderable": false }  // Delete button.
                 ],
