--- a/app/templates/tagValueNotes/tagValueNotes.html
+++ b/app/templates/tagValueNotes/tagValueNotes.html
@@ -17,8 +17,7 @@ Tag Value Notes
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "ElementTemplate",
                 selectedId = elementAttribute.Element.ElementTemplate.ElementTemplateId) }}">{{ elementAttribute.Element.ElementTemplate.Name }}</a></li>
             <li><a href = "{{ url_for("elements.dashboard", elementId = elementAttribute.Element.ElementId) }}">{{ elementAttribute.Element.Name }}</a></li>
-            <li><a href = "{{ url_for("tagValues.listTagValues", tagId = tagValue.Tag.TagId, elementAttributeId = elementAttribute.ElementAttributeId) }}">
-                {{ elementAttribute.ElementAttributeTemplate.Name }}</a></li>
+            <li class = "active">{{ elementAttribute.ElementAttributeTemplate.Name }}</li>
             <li class = "active">{{ tagValue.Timestamp }}</li>
         {% else %}
             <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Root") }}">..</a></li>
