--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -75,11 +75,11 @@ Tag Values
                         {% set noteButtonClass = "btn btn-default" %}
                     {% endif %}
                     {% if elementAttribute %}
-                        <td><a class = "{{ noteButtonClass }}" title = "Note" href = "{{ url_for("tagValueNotes.listTagValueNotes", 
+                        <td><a class = "{{ noteButtonClass }}" title = "Notes" href = "{{ url_for("tagValueNotes.listTagValueNotes", 
                             tagValueId = tagValue.TagValueId, elementAttributeId = elementAttribute.ElementAttributeId) }}">
                             <span class = "glyphicon glyphicon-comment"></span></a></td>
                     {% else %}
-                        <td><a class = "{{ noteButtonClass }}" title = "Note" href = "{{ url_for("tagValueNotes.listTagValueNotes", 
+                        <td><a class = "{{ noteButtonClass }}" title = "Notes" href = "{{ url_for("tagValueNotes.listTagValueNotes", 
                             tagValueId = tagValue.TagValueId) }}"><span class = "glyphicon glyphicon-comment"></span></a></td>
                     {% endif %}
                     <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("tagValues.deleteTagValue", tagValueId = tagValue.TagValueId) }}">
