--- a/app/templates/tags/select.html
+++ b/app/templates/tags/select.html
@@ -11,19 +11,16 @@ Tags
     <ol class = "breadcrumb">
         {% if childrenClass == "Enterprise" %}
             <li class = "active">..</li>
-            {% set tableHeader = "Enterprise" %}
             {% set pageHeaderSubText = "Enterprises" %}
         {% elif childrenClass == "Site" %}
             <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Root") }}">..</a></li>
             <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Site" %}
             {% set pageHeaderSubText = "Sites" %}
         {% elif childrenClass == "Area" %}
             <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Root") }}">..</a></li>
             <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Enterprise",
                 selectedId = parent.Enterprise.id()) }}">{{ parent.Enterprise.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Area" %}
             {% set pageHeaderSubText = "Areas" %}
         <!-- "and parent" checks for systems that have not been configured with an area yet. -->
         {% elif childrenClass == "Tag" and parent %}
@@ -33,7 +30,6 @@ Tags
             <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Site",
                 selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Tag" %}
             {% set pageHeaderSubText = "" %}
         {% endif %}
     </ol>
@@ -45,7 +41,7 @@ Tags
     {% if childrenClass == "Tag" and parent and current_user.isAdministrator() %}
         <a class = "btn btn-default" title = "Add Tag" href = "{{ url_for("tags.addTag", areaId = parent.id()) }}" role = "button">
             <span class = "glyphicon glyphicon-plus"></span>Tag</a>
-        <a class = "btn btn-default" title = "Add Lookup" href = "{{ url_for("tags.addTag", areaId = parent.id(), lookup = True) }}" role = "button">
+        <a class = "btn btn-default" title = "Add Lookup Tag" href = "{{ url_for("tags.addTag", areaId = parent.id(), lookup = True) }}" role = "button">
             <span class = "glyphicon glyphicon-plus"></span> Lookup Tag</a>
     {% endif %}
     <br><br>    
@@ -53,7 +49,7 @@ Tags
         <thead>
             <tr>
                 <th></th>
-                <th>{{ tableHeader }}</th>
+                <th>Name</th>
                 <th>Description</th>
                 <th></th>
                 <th></th>
@@ -64,10 +60,10 @@ Tags
                 {% for child in children %}
                     <tr>
                         {% if childrenClass == "Tag" %}
-                            <td><a class = "btn btn-default" title = "Tag Values" href = "{{ url_for("tagValues.listTagValues",
+                            <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tagValues.listTagValues",
                                 tagId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
                         {% else %}
-                            <td><a class = "btn btn-default" title = "Children" href = "{{ url_for("tags.selectTag", selectedClass = child.__class__.__name__,
+                            <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tags.selectTag", selectedClass = child.__class__.__name__,
                                 selectedId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
                         {% endif %}
                         <td>{{ child.Name }}</td>
