--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -42,50 +42,52 @@ Event Frame Dashboard
             {% endfor %}
     </ol>
 </div>
-<div class = "page-header">
-    <h1>Child Event Frames <small>{{ eventFrame.origin().Element.Name }}</small></h1>
-</div>
-<div>
-    <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrames.addEventFrame", parentEventFrameId = eventFrame.EventFrameId) }}"
-        role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
-    <br><br>
-    <table id = "childEventFramesTable" class = "table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Template</th>
-                <th>Name</th>
-                <th>Start</th>
-                <th>End</th>
-                <th></th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for eventFrame in eventFrame.EventFrames %}
+{% if eventFrame.hasDescendants() %}
+    <div class = "page-header">
+        <h1>Child Event Frames <small>{{ eventFrame.origin().Element.Name }}</small></h1>
+    </div>
+    <div>
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrames.addEventFrame", parentEventFrameId = eventFrame.EventFrameId) }}"
+            role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
+        <br><br>
+        <table id = "childEventFramesTable" class = "table">
+            <thead>
                 <tr>
-                    <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.dashboard", eventFrameId = eventFrame.EventFrameId,) }}">
-                        <span class = "glyphicon glyphicon-list"></span></a></td>
-                    <td>{{ eventFrame.EventFrameTemplate.Name }}</td>
-                    <td>{{ eventFrame.friendlyName() }}</td>
-                    <td>{{ eventFrame.StartTimestamp }}</td>
-                    <td>{{ eventFrame.EndTimestamp }}</td>
-                    {% if eventFrame.EndTimestamp == None %}
-                        <td><a class = "btn btn-default" title = "End" href = "{{ url_for("eventFrames.endEventFrame",
-                            eventFrameId = eventFrame.EventFrameId) }}"><span class = "glyphicon glyphicon-stop"></span></a></td>
-                    {% else %}
-                        <td></td>
-                    {% endif %}
-                    <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrames.editEventFrame",
-                        eventFrameId = eventFrame.EventFrameId) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
-                    <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrames.deleteEventFrame",
-                        eventFrameId = eventFrame.EventFrameId) }}"><span class = "glyphicon glyphicon-trash"></span></a></td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+                    <th></th>
+                    <th>Template</th>
+                    <th>Name</th>
+                    <th>Start</th>
+                    <th>End</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for eventFrame in eventFrame.EventFrames %}
+                    <tr>
+                        <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.dashboard",
+                            eventFrameId = eventFrame.EventFrameId,) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
+                        <td>{{ eventFrame.EventFrameTemplate.Name }}</td>
+                        <td>{{ eventFrame.friendlyName() }}</td>
+                        <td>{{ eventFrame.StartTimestamp }}</td>
+                        <td>{{ eventFrame.EndTimestamp }}</td>
+                        {% if eventFrame.EndTimestamp == None %}
+                            <td><a class = "btn btn-default" title = "End" href = "{{ url_for("eventFrames.endEventFrame",
+                                eventFrameId = eventFrame.EventFrameId) }}"><span class = "glyphicon glyphicon-stop"></span></a></td>
+                        {% else %}
+                            <td></td>
+                        {% endif %}
+                        <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrames.editEventFrame",
+                            eventFrameId = eventFrame.EventFrameId) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
+                        <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrames.deleteEventFrame",
+                            eventFrameId = eventFrame.EventFrameId) }}"><span class = "glyphicon glyphicon-trash"></span></a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endif %}
 <div class = "page-header">
     <h1>Notes <small>{{ eventFrame.origin().Element.Name }}</small></h1>
 </div>
