Place holder for event frame attributes.

--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -89,6 +89,101 @@ Event Frame Dashboard
     </div>
 {% endif %}
 <div class = "page-header">
+    <h1>Attributes <small>{{ eventFrame.origin().Element.Name }} <a class = "btn btn-default" title = "Associate Attributes with Tags"
+        href = "{#{ url_for("elementAttributes.listElementAttributes", elementId = element.ElementId) }#}">
+        <span class = "glyphicon glyphicon-link"></span></a></small></h1>
+</div>
+<div>
+    <table id = "attributesTable" class = "table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Attribute</th>
+                <th>Last Timestamp</th>
+                <th>Last Value</th>
+                <th>Unit</th>
+                <th>New Value</th>
+                <th>New Timestamp</th>
+                <th><button class = "btn btn-default" id = "buttonAttributesSaveAll" title = "Save All"><span class = "glyphicon glyphicon-floppy-disk"></span>
+                    </button></th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <!-- <tbody>
+            {#% for elementAttribute in elementAttributes %}
+                <tr>
+                    <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId,
+                        elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
+                    <td>{{ elementAttribute.ElementAttributeTemplate.Name }}</td>
+                    {% if elementAttribute.Tag.TagValues[0] %}
+                        {% set firstTagValue = elementAttribute.Tag.TagValues | sort(attribute = "Timestamp", reverse = True) | first %}
+                        <td id = "tdLastTimestamp{{ elementAttribute.ElementAttributeId }}">{{ firstTagValue.Timestamp }}</td>
+                        {% if elementAttribute.Tag.LookupId %}
+                            <td id = "tdLastValue{{ elementAttribute.ElementAttributeId }}">{{ elementAttribute.Tag.Lookup.LookupValues | 
+                                    selectattr("Value", "equalto", firstTagValue.Value) | map(attribute = "Name") | list | first }}          
+                            <td>{{ elementAttribute.Tag.Lookup.Name }}</td>
+                        {% else %}
+                            <td id = "tdLastValue{{ elementAttribute.ElementAttributeId }}">{{ firstTagValue.Value }}</td>                    
+                            <td>{{ firstTagValue.Tag.UnitOfMeasurement.Abbreviation }}</td>
+                        {% endif %}
+                    {% else %}
+                        <td id = "tdLastTimestamp{{ elementAttribute.ElementAttributeId }}"></td>
+                        <td id = "tdLastValue{{ elementAttribute.ElementAttributeId }}"></td>
+                        <td></td>
+                    {% endif %}
+                    <td>
+                        <div class = "form-group" id = "divNewValue{{ elementAttribute.ElementAttributeId }}">
+                        {% if elementAttribute.Tag.LookupId %}
+                            <select class = "form-control" id = "selectNewValue{{ elementAttribute.ElementAttributeId }}">
+                                <option value = "-1"></option>
+                                {% for lookupValue in elementAttribute.Tag.Lookup.LookupValues %}
+                                    {% if lookupValue.Selectable %}
+                                        <option value = "{{ lookupValue.Value }}">{{ lookupValue.Name}}</option>
+                                    {% endif %}
+                                {% endfor %}
+                            </select>
+                            <p class = "help-block" id = "pNewValue{{ elementAttribute.ElementAttributeId }}"></p>
+                        {% else %}
+                            <input class = "form-control" id = "inputNewValue{{ elementAttribute.ElementAttributeId }}" value = "">
+                            <p class = "help-block" id = "pNewValue{{ elementAttribute.ElementAttributeId }}"></p>
+                        {% endif %}
+                        </div>
+                    </td>
+                    <td>
+                        <div class = "form-group" id = "divNewTimestamp{{ elementAttribute.ElementAttributeId }}">
+                            <input class = "form-control" id = "inputNewTimestamp{{ elementAttribute.ElementAttributeId }}" value = "">
+                            <p class = "help-block" id = "pNewTimestamp{{ elementAttribute.ElementAttributeId }}"></p>
+                        </div>
+                    </td>
+                    <td></td>
+                    {% if elementAttribute.Tag.TagValues[0] %}
+                        {% if elementAttribute.Tag.TagValues[0].TagValueNotes[0] %}
+                            {% set noteButtonClass = "btn btn-default has-note" %}
+                        {% else %}
+                            {% set noteButtonClass = "btn btn-default" %}
+                        {% endif %}
+                        <td><a class = "{{ noteButtonClass }}" title = "Last Value Notes" href = "{{ url_for("tagValueNotes.listTagValueNotes", 
+                                tagValueId = firstTagValue.TagValueId, elementAttributeId = elementAttribute.ElementAttributeId) }}">
+                                <span class = "glyphicon glyphicon-comment"></span></a></td>
+                        <td><a class = "btn btn-default" title = "Edit Last Value"
+                            href = "{{ url_for("tagValues.editTagValue", tagValueId = firstTagValue.TagValueId,
+                            elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
+                        <td><a class = "btn btn-default" title = "Delete Last Value"
+                            href = "{{ url_for("tagValues.deleteTagValue", tagValueId = firstTagValue.TagValueId) }}">
+                            <span class = "glyphicon glyphicon-trash"></span></a></td>
+                    {% else %}
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    {% endif %}
+                </tr>
+            {% endfor %#}
+        </tbody> -->
+    </table>
+</div>
+<div class = "page-header">
     <h1>Notes <small>{{ eventFrame.origin().Element.Name }}</small></h1>
 </div>
 <div>
