Moved associate attributes w/ tags buttons for elements & event frames.

--- a/app/templates/elementAttributes/elementAttributes.html
+++ b/app/templates/elementAttributes/elementAttributes.html
@@ -14,7 +14,7 @@ Element Attributes
             selectedId = element.ElementTemplate.Site.SiteId) }}">{{ element.ElementTemplate.Site.Name }}</a></li>
         <li><a href = "{{ url_for("elements.selectElement", selectedClass = "ElementTemplate",
             selectedId = element.ElementTemplate.ElementTemplateId) }}">{{ element.ElementTemplate.Name }}</a></li>
-        <li><a href = "{{ url_for("elements.dashboard", elementId = element.ElementId) }}">{{ element.Name }}</a></li>
+        <li class = "active">{{ element.Name }}</a></li>
     </ol>
 </div>
 <div class = "page-header">
